add create product handler
